implement cli app, v1

--- a/notebooks/model-builder.ipynb
+++ b/notebooks/model-builder.ipynb
@@ -20,9 +20,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from tidyphotos import core as co\n",
-    "from tidyphotos import fs\n",
-    "from tidyphotos import plots as plots\n",
+    "from tidymypics import core as co\n",
+    "from tidymypics import fs\n",
+    "from tidymypics import plots as plots\n",
     "import os"
    ]
   },
